Configure Spring Cloud Gateway routes for auth and study